# matrix-nilm-project-FFT

./: fft_ch09_세진.ipynb  pyproject.toml  전처리.ipynb  피클 변환 코드.ipynb
